--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -1,6 +1,7 @@
 .Track {
   display: flex;
   align-items: center;
+  margin: auto;
   border-bottom: 1px solid rgba(256, 256, 256, 0.8);
 }
 
@@ -20,7 +21,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 72px;
+  height: auto;
 }
 
 .Track-information h3 {
@@ -28,6 +29,7 @@
 }
 
 .Track-information p {
+
   font-size: .83rem;
   font-weight: 300;
   color: rgba(256, 256, 256, 0.8);
